--- a/Imersão_Dados_Alura.ipynb
+++ b/Imersão_Dados_Alura.ipynb
@@ -6,7 +6,7 @@
       "name": "Imersão_Dados_Alura",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOcJCSa2OWM+HsIYqQzP2/n",
+      "authorship_tag": "ABX9TyOO1olzUc7eV/L9Mv2cRa6d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,6 +236,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LkhdjLlmXFII"
+      },
+      "source": [
+        "parte2\n"
+      ]
     }
   ]
 }
